--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -1,10 +1,12 @@
+CC=gcc
+
 all: writer
 
 writer: writer.o
-	$(CROSS_COMPILE)gcc writer.o -o writer
+	$(CROSS_COMPILE)$(CC) writer.o -o writer
 
 writer.o: writer.c
-	$(CROSS_COMPILE)gcc -c writer.c -o writer.o
+	$(CROSS_COMPILE)$(CC) -c writer.c -o writer.o
 
 clean:
 	rm -f *.o writer *.elf *.map
