change makefile again to try to fix autograder

--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -1,10 +1,10 @@
 all: writer
 
 writer: writer.o
-	$(CROSS_COMPILE)$(CC) $(CFLAGS) $(INCLUDES) writer.o -o writer
+	$(CROSS_COMPILE)$(CC) $(CFLAGS) $(INCLUDES) writer.o -o writer $(LDFLAGS)
 
 writer.o: writer.c
-	$(CROSS_COMPILE)$(CC) $(CFLAGS) $(INCLUDES) -c writer.c -o writer.o
+	$(CROSS_COMPILE)$(CC) $(CFLAGS) $(INCLUDES) -c writer.c -o writer.o $(LDFLAGS)
 
 clean:
 	rm -f *.o writer *.elf *.map
