Put makefile back to its original locally working state

--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -1,10 +1,13 @@
+CC=gcc
+
 all: writer
 
 writer: writer.o
-	$(CROSS_COMPILE)$(CC) $(CFLAGS) $(INCLUDES) writer.o -o writer $(LDFLAGS)
+	$(CROSS_COMPILE)$(CC) writer.o -o writer
 
 writer.o: writer.c
-	$(CROSS_COMPILE)$(CC) $(CFLAGS) $(INCLUDES) -c writer.c -o writer.o $(LDFLAGS)
+	$(CROSS_COMPILE)$(CC) -c writer.c -o writer.o
 
 clean:
 	rm -f *.o writer *.elf *.map
+
