--- a/mqtt/Makefile
+++ b/mqtt/Makefile
@@ -1,7 +1,7 @@
 CC ?= $(CROSS_COMPILE)gcc
 CFLAGS ?= -g -Wall -Werror
 TARGET ?= mqtt
-LDFLAGS ?= -llibpaho-mqtt3cs
+LDFLAGS ?= -lpaho-mqtt3cs
 
 all: $(TARGET)
 default: $(TARGET)
@@ -10,3 +10,4 @@ $(TARGET):$(TARGET).c
 	$(CC) $(CFLAGS) $^ -o $@ $(INCLUDES) $(LDFLAGS)
 clean:
 	rm -f *.o $(TARGET) *.elf *.map
+	
