Put makefile back to working state for ubuntu host of mqtt

--- a/mqtt/Makefile
+++ b/mqtt/Makefile
@@ -1,7 +1,8 @@
 CC ?= $(CROSS_COMPILE)gcc
 CFLAGS ?= -g -Wall -Werror
 TARGET ?= mqtt
-LDFLAGS ?= -lpaho-mqtt3cs
+#LDFLAGS ?= -lpaho-mqtt3cs
+LDFLAGS = -l paho-mqtt3cs
 
 all: $(TARGET)
 default: $(TARGET)
